--- a/electricity/pom.xml
+++ b/electricity/pom.xml
@@ -12,6 +12,14 @@
 			<version>1.13.7.Final</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.26</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
